--- a/fastapi/basic_fastapi/pyproject.toml
+++ b/fastapi/basic_fastapi/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "ruff>=0.9.3",
+    "uvicorn>=0.34.0",
 ]
 
 # Ruff config file in this root location
